tests/ui/range/range_traits-3.rs
use std::ops::*;

#[derive(Copy, Clone)] //~ ERROR Copy
struct R(RangeFrom<usize>);

fn main() {}
